[package]
authors = ["Ashley Blewer <ashley.blewer@gmail.com>"]
categories = ["wasm"]
description = "media-collection-viewer"
edition = "2018"
license = "Apache-2.0/MIT"
name = "media-collection-viewer"
readme = "./README.md"
repository = "https://github.com/ablwr/media-collection-viewer"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
yew = "0.17.3"
yew-router = { version="0.14.0", features = ["web_sys"] }

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

js-sys = "0.3"
web-sys = "0.3"
stdweb = "0.4.20"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"


[dev-dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCollection",
]
